--- a/default.css
+++ b/default.css
@@ -1,11 +1,16 @@
-/*
- *	Macalha Default Stylesheet
- *	Version: 1.0.5 (2013.09.04)
- *
- *	This stylesheet doesn't validate because it uses "hacks"
- *	and vendor-specific properties
- *	 
- */
+/*******************************************************************************
+	Macalha Default Stylesheet
+	Version: 2.0 (2014.07.03)
+
+	Based on the following projects:
+		- Normalize.css (http://necolas.github.io/normalize.css/)
+		- Eric Meyer's CSS Reset (http://meyerweb.com/eric/tools/css/reset/)
+		- HTML5 Boilerplate (http://html5boilerplate.com/)
+		- Bootstrap (http://getbootstrap.com/)
+		- Cardinal (http://cardinalcss.com/)
+		- YUI CSS Components (https://yuilibrary.com/yui/css/)
+		- Macalha's experience ;)
+ *******************************************************************************/
 
 @charset "utf-8";
 
@@ -46,40 +51,6 @@
 	box-sizing: border-box;
 }
 
-/* HTML5 display definitions */
-
-article, aside, details, figcaption, figure, footer,
-header, hgroup, main, nav, section, summary {
-	display: block;
-}
-
-audio {
-	width: 100%;
-}
-
-audio, canvas, img, svg, video {
-	vertical-align: middle;
-	display: inline-block;
-	*display: inline;
-	*zoom: 1;
-}
-
-audio:not([controls]), menu[type="popup"], source, track {
-	display: none;
-}
-
-audio:not([controls]) {
-	height: 0;
-}
-
-video {
-	object-fit: contain;
-}
-
-[hidden], template {
-	display: none;
-}
-
 /* Reset elements */
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6,
@@ -97,6 +68,34 @@ hgroup, main, menu, nav, section, summary, time, mark, audio, video {
 	vertical-align: baseline;
 	font: inherit;
 	font-size: 100%;
+}
+
+/* HTML5 display definitions */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
+	display: block;
+}
+
+audio {
+	width: 100%;
+}
+
+audio, canvas, img, progress, svg, video {
+	display: inline-block;
+	vertical-align: baseline;
+}
+
+audio:not([controls]), menu[type="popup"], source, track {
+	display: none;
+    height: 0;
+}
+
+video {
+	object-fit: contain;
+}
+
+[hidden], template {
+	display: none;
 }
 
 /* Element HEAD (and its descendants) will never be displayed */
@@ -138,15 +137,11 @@ bdo {
 
 /* Base definitions */
 
-html, body {
-	height: 100%;
-}
-
 html {
 	overflow-y: scroll;
 	background-color: #fff;
-	font-family: sans-serif;
 	font-size: 100%;
+	height: 100%;
     -webkit-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
@@ -160,7 +155,7 @@ html:not([dir]) {
 
 html, button, input, select, textarea {
 	color: #444;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Segoe UI', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 @media only screen and (max-width: 320px) {
@@ -198,7 +193,7 @@ html, button, input, select, textarea {
 body {
 	font-size: 1rem;
     line-height: 1.5;
-	margin: 0;
+	min-height: 100%;
 	-webkit-hyphens: auto;
 	-moz-hyphens: auto;
 	-ms-hyphens: auto;
@@ -258,7 +253,7 @@ a:link {
 	-webkit-tap-highlight-color: #b3d4fc;
 }
 
-a:hover, a:active {
+a:active, a:hover {
 	outline: 0;
 }
 
@@ -270,39 +265,34 @@ a[href^="http:"], a[href^="https:"], a[href^="ftp:"], a[rel~="external"] {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #222;
-	line-height: 1.333;
 	font-weight: 700;
+	line-height: 1.333;
+	margin: 0 0 0.33em 0;
 	text-rendering: optimizeLegibility;
 }
 
 h1 {
-	margin: 0.67em 0;
-	font-size: 2em;
+	font-size: 2.5em;
 }
 
 h2 {
-	margin: 0.83em 0;
-	font-size: 1.5em;
+	font-size: 2em;
 }
 
 h3 {
-	margin: 1em 0;
-	font-size: 1.17em;
+	font-size: 1.625em;
 }
 
 h4 {
-	margin: 1.33em 0;
-	font-size: 1em;
+	font-size: 1.25em;
 }
 
 h5 {
-	margin: 1.67em 0;
-	font-size: 0.83em;
+	font-size: 1.125em;
 }
 
 h6 {
-	margin: 2.33em 0;
-	font-size: 0.75em;
+	font-size: 1em;
 }
 
 /* Typography */
@@ -362,7 +352,7 @@ blockquote footer {
 
 hr {
 	display: block;
-	margin: 1em 0;
+	margin: 2em 0;
 	padding: 0;
 	height: 1px;
 	border: 0;
@@ -385,7 +375,7 @@ del {
 
 mark {
 	background: #ff0;
-	color: #000;
+	color: #222;
 	font-weight: 700;
 	font-style: italic;
 }
@@ -394,8 +384,16 @@ details {
 	cursor: pointer;
 }
 
-p, pre {
+p {
+	margin: 0 0 1.6em 0;
+}
+
+pre {
 	margin: 1em 0;
+}
+
+ul + p, ul + pre, ol + p, ol + pre {
+	margin-top: 0;
 }
 
 pre, code, kbd, samp, var, abbr, acronym {
@@ -407,15 +405,18 @@ pre, code, kbd, samp, var, abbr, acronym {
 
 pre, code, kbd, samp, var {
 	font-size: 1em;
-	*font-size: 108%;
 	font-family: Monaco, Menlo, Consolas, 'Courier New', monospace;
-	_font-family: 'Courier New', monospace;
+}
+
+code {
+	color: #222;
 }
 
 pre {
 	white-space: pre;
 	white-space: pre-wrap;
 	word-wrap: break-word;
+	overflow: auto;
 }
 
 q {
@@ -508,7 +509,6 @@ nav ul, nav ol {
 
 img {
 	vertical-align: middle;
-	-ms-interpolation-mode: bicubic;
 }
 
 img, object, embed {
@@ -520,6 +520,10 @@ img, object, embed {
 
 img[width], img[height], object[width], object[height], embed[width], embed[height] {
     max-width: none !important;
+}
+
+figure {
+  margin: 1em 40px;
 }
 
 figure > img {
@@ -551,34 +555,31 @@ legend {
 	border: 0;
 	padding: 0;
 	white-space: normal;
-	*margin-left: -7px;
 }
 
-button, input, select, textarea {
+button, input, optgroup, select, textarea {
 	font-family: inherit;
 	font-size: 100%;
+	color: inherit;
 	margin: 0;
 	vertical-align: baseline;
-	*vertical-align: middle;
+}
+
+button {
+	overflow: visible;
 }
 
 button, input {
 	line-height: normal;
-	*overflow: visible;
 }
 
 button, select {
 	text-transform: none;
 }
 
-table button, table input {
-	*overflow: auto;
-}
-
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
 	cursor: pointer;
 	-webkit-appearance: button;
-	*overflow: visible;
 }
 
 button[disabled], html input[disabled] {
@@ -588,13 +589,10 @@ button[disabled], html input[disabled] {
 input[type="checkbox"], input[type="image"], input[type="radio"],
 input[type="button"], input[type="reset"], input[type="submit"] {
 	display: inline-block;
-	*display: inline;
 	width: auto;
 }
 
 input[type="checkbox"], input[type="radio"] {
-	*width: 13px;
-	*height: 13px;
 	padding: 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -607,13 +605,15 @@ input[type="radio"] {
 
 input[type="checkbox"] {
 	vertical-align: bottom;
-	*vertical-align: baseline;
-	_vertical-align: text-bottom;
 }
 
 input[type="hidden"] {
 	display: none !important;
 	visibility: hidden !important;
+}
+
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
 }
 
 input[type="search"] {
@@ -666,6 +666,10 @@ select[multiple], select[size] {
 	height: auto;
 }
 
+optgroup {
+	font-weight: 700;
+}
+
 /* Tables */
 
 table {
@@ -674,6 +678,8 @@ table {
 	border-collapse: collapse;
 	font: 100%;
 	font-size: inherit;
+	word-wrap: break-word;
+	-ms-word-wrap: break-word;
 	zoom: 1;
 }
 
@@ -790,10 +796,6 @@ iframe {
 
 .clearfix:after {
 	clear: both;
-}
-
-.clearfix {
-	*zoom: 1;
 }
 
 /* Responsive classes */
